--- a/templates/react-dynamic/.env.template
+++ b/templates/react-dynamic/.env.template
@@ -2,6 +2,6 @@
 VITE_SBC_API_KEY={{apiKey}}
 # Get your Dynamic Environment ID at https://app.dynamic.xyz/
 VITE_DYNAMIC_ENVIRONMENT_ID=your_dynamic_env_id
-# Supported chains: "baseSepolia" | "base" | "radiusTestnet"
+# Supported chains: "baseSepolia" | "base"
 VITE_CHAIN={{chain}}
 VITE_RPC_URL=
