fix(react): use walletClient.account for permit signing
Fixes chainId mismatch error when signing EIP-2612 permit.
The signTypedData call was passing the owner address string instead
of the walletClient's account object, causing viem to use JSON-RPC
signing which requires chain validation.

--- a/templates/react/src/App.tsx.template
+++ b/templates/react/src/App.tsx.template
@@ -606,7 +606,7 @@ async function getPermitSignature({
     };
     
     const signature = await walletClient.signTypedData({
-      account: ownerChecksum,
+      account: walletClient.account!,
       domain,
       types,
       primaryType: 'Permit',
