fix: permit signature BigInt serialization
- Convert BigInt values to strings in EIP-712 message
- Use address string for account parameter
- Remove explicit EIP712Domain from types (viem infers it)

--- a/templates/react-para/src/utils/permit.ts.template
+++ b/templates/react-para/src/utils/permit.ts.template
@@ -37,16 +37,10 @@ export function buildPermitTypedData(params: {
     domain: {
       name: tokenName,
       version: '1',
-      chainId: BigInt(chainId),
+      chainId: chainId,
       verifyingContract: tokenAddress,
     },
     types: {
-      EIP712Domain: [
-        { name: 'name', type: 'string' },
-        { name: 'version', type: 'string' },
-        { name: 'chainId', type: 'uint256' },
-        { name: 'verifyingContract', type: 'address' },
-      ],
       Permit: [
         { name: 'owner', type: 'address' },
         { name: 'spender', type: 'address' },
@@ -56,7 +50,7 @@ export function buildPermitTypedData(params: {
       ],
     },
     primaryType: 'Permit',
-    message: { owner, spender, value, nonce, deadline },
+    message: { owner, spender, value: value.toString(), nonce: nonce.toString(), deadline: deadline.toString() },
   } as const;
 }
 
