--- a/templates/react-turnkey/src/App.tsx.template
+++ b/templates/react-turnkey/src/App.tsx.template
@@ -1656,17 +1656,11 @@ async function getPermitSignature({
     const domain = {
       name: tokenName as string,
       version: '1',
-      chainId: BigInt(chainId),
+      chainId: chainId,
       verifyingContract: SBC_TOKEN_ADDRESS(chain) as `0x${string}`,
     };
 
     const types = {
-      EIP712Domain: [
-        { name: 'name', type: 'string' },
-        { name: 'version', type: 'string' },
-        { name: 'chainId', type: 'uint256' },
-        { name: 'verifyingContract', type: 'address' },
-      ],
       Permit: [
         { name: 'owner', type: 'address' },
         { name: 'spender', type: 'address' },
@@ -1674,19 +1668,18 @@ async function getPermitSignature({
         { name: 'nonce', type: 'uint256' },
         { name: 'deadline', type: 'uint256' },
       ],
-    } as const;
+    };
 
     const message = {
       owner: ownerChecksum,
       spender: spenderChecksum,
-      value: value,
-      nonce: nonce as bigint,
-      deadline: BigInt(deadline),
+      value: value.toString(),
+      nonce: nonce.toString(),
+      deadline: deadline.toString(),
     };
 
-    // walletClient.account is available on the client
     const signature = await walletClient.signTypedData({
-      account: walletClient.account!,
+      account: ownerChecksum as `0x${string}`,
       domain,
       types,
       primaryType: 'Permit',
