revert: undo untested changes to react-turnkey and react-para templates

--- a/templates/react-para/src/utils/permit.ts.template
+++ b/templates/react-para/src/utils/permit.ts.template
@@ -37,10 +37,16 @@ export function buildPermitTypedData(params: {
     domain: {
       name: tokenName,
       version: '1',
-      chainId: chainId,
+      chainId: BigInt(chainId),
       verifyingContract: tokenAddress,
     },
     types: {
+      EIP712Domain: [
+        { name: 'name', type: 'string' },
+        { name: 'version', type: 'string' },
+        { name: 'chainId', type: 'uint256' },
+        { name: 'verifyingContract', type: 'address' },
+      ],
       Permit: [
         { name: 'owner', type: 'address' },
         { name: 'spender', type: 'address' },
@@ -50,7 +56,7 @@ export function buildPermitTypedData(params: {
       ],
     },
     primaryType: 'Permit',
-    message: { owner, spender, value: value.toString(), nonce: nonce.toString(), deadline: deadline.toString() },
+    message: { owner, spender, value, nonce, deadline },
   } as const;
 }
 
