--- a/templates/react-turnkey/src/App.tsx.template
+++ b/templates/react-turnkey/src/App.tsx.template
@@ -1656,11 +1656,17 @@ async function getPermitSignature({
     const domain = {
       name: tokenName as string,
       version: '1',
-      chainId: chainId,
+      chainId: BigInt(chainId),
       verifyingContract: SBC_TOKEN_ADDRESS(chain) as `0x${string}`,
     };
 
     const types = {
+      EIP712Domain: [
+        { name: 'name', type: 'string' },
+        { name: 'version', type: 'string' },
+        { name: 'chainId', type: 'uint256' },
+        { name: 'verifyingContract', type: 'address' },
+      ],
       Permit: [
         { name: 'owner', type: 'address' },
         { name: 'spender', type: 'address' },
@@ -1668,18 +1674,19 @@ async function getPermitSignature({
         { name: 'nonce', type: 'uint256' },
         { name: 'deadline', type: 'uint256' },
       ],
-    };
+    } as const;
 
     const message = {
       owner: ownerChecksum,
       spender: spenderChecksum,
-      value: value.toString(),
-      nonce: nonce.toString(),
-      deadline: deadline.toString(),
+      value: value,
+      nonce: nonce as bigint,
+      deadline: BigInt(deadline),
     };
 
+    // walletClient.account is available on the client
     const signature = await walletClient.signTypedData({
-      account: ownerChecksum as `0x${string}`,
+      account: walletClient.account!,
       domain,
       types,
       primaryType: 'Permit',
